.provarCaches/00D5f000005vwGkEAI/objects/rstk__rtshopcntl__c.object
<CustomObject>
    <description>rtshopcntl__c</description>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__rtshopcntl_div__r.rstk__sydiv_div__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rtshopcntl_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the division associated with the Shop Floor Control record</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Shop Floor Control Records</relationshipLabel>
        <relationshipName>Shop_Floor_Control_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtshopcntl_duedteschedopt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Shop Floor Control record, Due Date Scheduling Option Indicator</inlineHelpText>
        <label>Due Date Schedule Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rtshopcntl_pickdteschedopt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Shop Floor Control record, Pick Date Scheduling Option Indicator</inlineHelpText>
        <label>Pick Date Schedule Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rtshopcntl_reldteschedopt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Shop Floor Control record, Release Date Scheduling Option Indicator</inlineHelpText>
        <label>Release Date Schedule Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shop Floor Control Record</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Floor Control Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>